# market-data-pipeline

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
config/: example1.json
examples/: simple-example.json
server/: CMakeLists.txt
server/include/: ArgParser.hpp  ConfigParser.hpp  Server.hpp
server/src/: ArgParser.cpp  ConfigParser.cpp  main.cpp
